Finish Kafka, add prometheus and grafna for monitoring